--- a/portfolio/B19/production.html
+++ b/portfolio/B19/production.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220608195501">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220609150231">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -61,8 +61,8 @@
 											<div class="menu__arrow"></div>
 											<ul class="menu__sublist">
 												<li class="menu__subitem"><a href="productionb.html" class="menu__sublink">Бетону</a></li>
-												<li class="menu__subitem"><a href="#" class="menu__sublink">Багатоповерхові панельні
-														будинки</a></li>
+												<li class="menu__subitem"><a href="productionpan.html" class="menu__sublink">Виробництво
+														панелей</a></li>
 											</ul>
 										</li>
 										<li class="menu__item"><a href="#" class="menu__link">Новини</a></li>
@@ -107,8 +107,7 @@
 												<div class="menu__arrow"></div>
 												<ul class="mobilemenu__sublist">
 													<li class="mobilemenu__subitem"><a href="productionb.html" class="mobilemenu__link">Бетону</a></li>
-													<li class="mobilemenu__subitem"><a href="#" class="mobilemenu__link">Багатоповерхові
-															панельні будинки</a></li>
+													<li class="mobilemenu__subitem"><a href="productionpan.html" class="mobilemenu__link">Виробництво панелей</a></li>
 												</ul>
 											</li>
 											<li class="mobilemenu__item"><a href="#" class="mobilemenu__link">Новини</a></li>
@@ -186,7 +185,7 @@
 							<div class="row-productions__item item-productions">
 								<div class="item-productions__body">
 									<div class="item-productions__image"><img src="img/productions/item02.jpg" alt="item1">
-										<a class="item-productions__link" href="#">
+										<a class="item-productions__link" href="productionpan.html">
 											<div class="item-productions__text">
 												<p>Виробництво панелей</p>
 											</div>
@@ -284,7 +283,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220608195501"></script>
+	<script src="js/app.min.js?_v=20220609150231"></script>
 </body>
 
 </html>
