--- a/portfolio/B19/production.html
+++ b/portfolio/B19/production.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220609150231">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220609180107">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -65,7 +65,7 @@
 														панелей</a></li>
 											</ul>
 										</li>
-										<li class="menu__item"><a href="#" class="menu__link">Новини</a></li>
+										<li class="menu__item"><a href="new.html" class="menu__link">Новини</a></li>
 										<li class="menu__item"><a href="#" class="menu__link">Екологія</a></li>
 										<li class="menu__item"><a href="#" class="menu__link">Експериментальний майданчик</a></li>
 										<li class="menu__item"><a href="#" class="menu__link">Модульні проєкти</a>
@@ -91,7 +91,7 @@
 												28 00</a>
 										</div>
 									</div>
-									<div class="mobilemenu-header__phone"><img src="img/header/phone-white.svg" alt="phone"></div>
+									<div class="mobilemenu-header__phone"><a href="tel:+380500102800"><img src="img/header/phone-white.svg" alt="phone"></a></div>
 									<div class="mobilemenu-header__inst"><img src="img/header/inst-white.svg" alt="inst"></div>
 									<div class="mobilemenu-header__facebook"><img src="img/header/facebook-white.svg" alt="Facebook">
 									</div>
@@ -110,7 +110,7 @@
 													<li class="mobilemenu__subitem"><a href="productionpan.html" class="mobilemenu__link">Виробництво панелей</a></li>
 												</ul>
 											</li>
-											<li class="mobilemenu__item"><a href="#" class="mobilemenu__link">Новини</a></li>
+											<li class="mobilemenu__item"><a href="new.html" class="mobilemenu__link">Новини</a></li>
 											<li class="mobilemenu__item"><a href="#" class="mobilemenu__link">Екологія</a></li>
 											<li class="mobilemenu__item"><a href="#" class="mobilemenu__link">Експериментальний
 													майданчик</a></li>
@@ -283,7 +283,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220609150231"></script>
+	<script src="js/app.min.js?_v=20220609180107"></script>
 </body>
 
 </html>
