--- a/portfolio/B19/eco.html
+++ b/portfolio/B19/eco.html
@@ -137,154 +137,88 @@
 				</div>
 			</div>
 		</header>
-		<div class="toppb">
-			<div class="toppb__container">
-				<div class="toppb__body">
-					<div class="toppb__title title">
-						<h1><span class="yellow-title">Виробництво</span> <span class="yellow-title">бетону</span></h1>
+		<div class="tope">
+			<div class="tope__container">
+				<div class="tope__body">
+					<div class="tope__title title">
+						<h1><span class="yellow-title">Екологія</span></h1>
 					</div>
-					<div class="toppb__text">
-						<p>Наша компанія займається власним виробництвом товарного бетону, готового бетону, готового розчину
-							цементного, бетону кладки марок М100, М150, М200, М250, М350, М400, М450, М500, М600, М700, М800, М900
-						</p>
+					<div class="tope__block">
+						<div class="tope__text">
+							<p>Технологія фотокаталітичного бетону вперше була використана в архітектурі при будівництві Церкви Діо
+								Падре Мізерікордіозо в Італії. Будівництво Річарда Майєра, звана також «Церквою Ювілею», було
+								присвячено
+								святкуванню 2000-річчя християнства, яке відзначалося 2000 року. Головним спонсором будівництва
+								виступила
+								італійська фірма-виробник будівельних матеріалів Italcementi Group. Для того, щоб білосніжні бетонні
+								«вітрила» нової церкви не вимагали частих чисток, фахівці цієї компанії використовували свою нову
+								розробку - біле покриття для стін, що самоочищається. Але в той момент вони не знали, що через вміст
+								діоксиду титану, білого пігменту цей барвник-штукатурка поглинає вихлопні гази та інші складові
+								міського
+								смогу.</p>
+						</div>
+						<div class="tope__image">
+							<img src="img/tope/image.png" alt="image">
+						</div>
 					</div>
-					<div class="toppb__label">
-						<p>Сьогодні бетон є одним із найпопулярніших будівельних матеріалів. Він:</p>
+					<div class="tope__label">
+						<p>Це відкриття порушило питання про широке застосування подібних матеріалів у міському будівництві. За
+							даними досліджень, повітря на відстані 2,5 м від фасаду, покритого фарбою з діоксидом титану, містить
+							різних продуктів горіння на 70% менше, ніж у середньому по місту. Тобто, пішоходи вдихають менше
+							шкідливих речовин, коли проходять повз будівлі, оброблені таким чином.</p>
 					</div>
-					<ul class="toppb__list">
-						<li class="toppb__item">міцний, надійний.</li>
-						<li class="toppb__item">вогне-, морозо-, жаростійкий.</li>
-						<li class="toppb__item">стійкий у хімічно агресивному водному та газовому середовищі.</li>
-					</ul>
 				</div>
 			</div>
 		</div>
 		<main class="page">
-			<div class="benefitspb">
-				<div class="benefitspb__container">
-					<div class="benefitspb__body">
-						<div class="benefitspb__image"></div>
-						<div class="benefitspb__title">
-							<h3>Б19 пропонує широкий асортимент бетонних/цементних розчинів для різноманітних потреб будівництва. Ми як
-								виробник бетону, завод, гарантуємо якість нашої продукції. </h3>
-						</div>
-						<div class="benefitspb__row row-benefitspb">
-							<div class="row-benefitspb__item item-benefitspb">
-								<div class="item-benefitspb__body">
-									<div class="item-benefitspb__text">
-										<p>Найпопулярніша марка, яку наш завод найбільше замовляє - <b>М 200 ПЗ</b>. За іншою класифікацією
-											- <b>В 15 ПЗ</b> (ПЗ -сильнорухлива). Вона має оптимальне для нашого географічного положення
-											співвідношення міцності та стійкості до різних кліматичних умов.
+			<div class="infoe">
+				<div class="infoe__container">
+					<div class="infoe__body">
+						<div class="infoe__row row-infoe">
+							<div class="row-infoe__item item-infoe">
+								<div class="item-infoe__body">
+									<div class="item-infoe__text">
+										<p>Бетон фотокаталітичний виготовляється за технологією, згідно з якою до рецептури бетону додають
+											наночастинки каталізатора - діоксиду титану (TiO2). Ця речовина прискорює хімічну реакцію
+											фотокаталізу, яка відбувається під дією сонячного світла, що потрапляє на поверхню бетону. В
+											результаті відбувається самоочищення поверхні бетону.
+										</p>
+										<p>Дослідження показують, що фотокаталітичні бетони мають фотокаталітичну активність і можуть
+											очищати повітря, наприклад, від оксидів азоту або летких органічних сполук. Додавання діоксиду
+											титану в цемент покращує механічні властивості одержуваних бетонів. Незважаючи на це переваги,
+											деякі недоліки, на жаль, все ще існують:
+										</p>
+										<p>- Іноді побічні продукти, що утворюються при фотокаталітичному розкладі забруднень, є більш
+											токсичними, ніж первинні. Це можна усунути шляхом сильної адсорбції побічних продуктів на
+											поверхні фотокаталізаторів до їхньої загальної мінералізації;
 										</p>
 									</div>
 								</div>
 							</div>
-							<div class="row-benefitspb__item item-benefitspb">
-								<div class="item-benefitspb__body">
-									<div class="item-benefitspb__text">
-										<p>
-											Здебільшого покупці орієнтуються на марку міцності бетону та його заповнювачі. Саме з цих
-											параметрів головним чином формується ціна.
+							<div class="row-infoe__item item-infoe">
+								<div class="item-infoe__body">
+									<div class="item-infoe__text">
+										<p>- Деякі фотокаталітичні цементи активуються лише при опроміненні ультрафіолетовим світлом. Також
+											є фотокаталізатори, наприклад, діоксид титану, допований атомами вуглецю, азоту або сірки, які
+											активні при опроміненні видимим світлом;
+											- Збільшення маси фотокаталізатора в цементі збільшує його фотокаталітичну активність
+										</p>
+										<p>Однак переваги фотокаталітичних бетонів, такі як очищення атмосферного повітря від забруднень,
+											підвищені механічні властивості та властивості самоочищення, роблять ці бетони будівельним
+											матеріалом найближчого майбутнього. Фотокаталітична активність бетонів на основі діоксиду титану
+											при регулярному чищенні активної поверхні зберігається через багато років після початку
+											застосування. На основі аналізу методів визначення ефективності фотокаталітичних бетонів
+											виявлено найкращі умови для їх застосування, а також зроблено висновки щодо використання
+											стандартних методів випробувань для фотокаталітичних бетонів.
 										</p>
 									</div>
-								</div>
-							</div>
-							<div class="row-benefitspb__item item-benefitspb">
-								<div class="item-benefitspb__body">
-									<div class="item-benefitspb__text">
-										<p>
-											Зазвичай для будівництва будинків або іншої інфраструктури (гаражів, майданчиків) відбувається
-											вибір між марками М100 до М400, які повністю покривають всі вимоги.
-										</p>
-									</div>
-								</div>
-							</div>
-							<div class="row-benefitspb__item item-benefitspb">
-								<div class="item-benefitspb__body">
-									<div class="item-benefitspb__text">
-										<p>
-											Бетон – це не той матеріал, на якому можна заощаджувати.
-											Будьте уважні – завжди вибирайте оптимальний для ваших робіт матеріал. У будівництві
-											найголовніше - це золоте співвідношення ціни та якості.
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="benefitspb__label">
-							<p>Весь бетон сертифікований на 100% та відповідає всім стандартам</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="eagle">
-				<div class="eagle__container">
-					<div class="eagle__body">
-						<div class="eagle__title">
-							<h2>Бетонно-змішувальна установка SIMEM EAGLE 100</h2>
-						</div>
-						<div class="eagle__slider swiper-eagle">
-							<div class="eagle__wrapper swiper-wrapper">
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide1.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide2.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide1.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide2.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide1.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide2.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide1.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide2.jpg" alt="">
-								</div>
-							</div>
-						</div>
-						<div class="eagle__title">
-							<h2>Система керування установки SIMEMATIC TOUCH </h2>
-						</div>
-						<div class="eagle__slider swiper-eagle">
-							<div class="eagle__wrapper swiper-wrapper">
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide1.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide2.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide1.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide2.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide1.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide2.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide1.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide2.jpg" alt="">
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
