--- a/portfolio/B19/about.html
+++ b/portfolio/B19/about.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220609180107">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220609190614">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -50,7 +50,7 @@
 							<div class="header__menu menu">
 								<nav class="menu__body">
 									<div class="menu__home">
-										<a class="active" href="/"><img src="img/header/home-icon.svg" alt="Home"></a>
+										<a class="active" href="index.html"><img src="img/header/home-icon.svg" alt="Home"></a>
 									</div>
 									<button type="button" class="search__exit"><span class="menu-icon"></span></button>
 									<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Введите поисковый запрос" class="menu__input hide">
@@ -66,7 +66,7 @@
 											</ul>
 										</li>
 										<li class="menu__item"><a href="new.html" class="menu__link">Новини</a></li>
-										<li class="menu__item"><a href="#" class="menu__link">Екологія</a></li>
+										<li class="menu__item"><a href="eco.html" class="menu__link">Екологія</a></li>
 										<li class="menu__item"><a href="#" class="menu__link">Експериментальний майданчик</a></li>
 										<li class="menu__item"><a href="#" class="menu__link">Модульні проєкти</a>
 											<div class="menu__arrow"></div>
@@ -100,7 +100,7 @@
 									<button type="button" class="menu__icon icon-menu"><span class="menu-icon"></span></button>
 									<nav class="mobilemenu">
 										<ul class="mobilemenu__list">
-											<li class="mobilemenu__item"><a href="/" class="mobilemenu__link">Головна</a></li>
+											<li class="mobilemenu__item"><a href="index.html" class="mobilemenu__link">Головна</a></li>
 											<li class="mobilemenu__item"><a href="about.html" class="mobilemenu__link">Про нас</a></li>
 											<li class="mobilemenu__item">
 												<a href="production.html" class="mobilemenu__link">Виробництво</a>
@@ -111,7 +111,7 @@
 												</ul>
 											</li>
 											<li class="mobilemenu__item"><a href="new.html" class="mobilemenu__link">Новини</a></li>
-											<li class="mobilemenu__item"><a href="#" class="mobilemenu__link">Екологія</a></li>
+											<li class="mobilemenu__item"><a href="eco.html" class="mobilemenu__link">Екологія</a></li>
 											<li class="mobilemenu__item"><a href="#" class="mobilemenu__link">Експериментальний
 													майданчик</a></li>
 											<li class="mobilemenu__item"><a href="#" class="mobilemenu__link">Модульні проєкти</a>
@@ -280,7 +280,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220609180107"></script>
+	<script src="js/app.min.js?_v=20220609190614"></script>
 </body>
 
 </html>
